statistical distance computation working within luigi

--- a/Notebooks/1-bit sum.ipynb
+++ b/Notebooks/1-bit sum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'empirical_privacy.one_bit_sum' from '/emp_priv/src/empirical_privacy/one_bit_sum.py'>"
+       "<module 'empirical_privacy.one_bit_sum_joblib' from '/emp_priv/src/empirical_privacy/one_bit_sum_joblib.py'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from empirical_privacy import one_bit_sum\n",
+    "from empirical_privacy import one_bit_sum_joblib as one_bit_sum\n",
     "from empirical_privacy import lsdd\n",
     "reload(one_bit_sum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,22 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.375"
+       "0.12537068761957668"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sd(4,0.5)"
+    "sd(40,0.5)"
    ]
   },
   {
