add batch generation of samples

--- a/Notebooks/1-bit sum.ipynb
+++ b/Notebooks/1-bit sum.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -18,7 +27,8 @@
     "import six\n",
     "if six.PY3:\n",
     "    from importlib import reload\n",
-    "\n",
+    "import luigi\n",
+    "import pickle\n",
     "\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +53,14 @@
        "<module 'empirical_privacy.one_bit_sum_joblib' from '/emp_priv/src/empirical_privacy/one_bit_sum_joblib.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from empirical_privacy.one_bit_sum import ComputeOneBitKNNConvergence\n",
+    "\n",
     "from empirical_privacy import one_bit_sum_joblib as one_bit_sum\n",
     "from empirical_privacy import lsdd\n",
     "reload(one_bit_sum)"
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +96,7 @@
        "0.12537068761957668"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +245,39 @@
     "plt.ylabel('Correctness Rate')\n",
     "plt.legend(loc=(0,1.1))\n",
     "#print ax.get_legend_handles_labels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.757  0.757  0.757  0.757]\n",
+      " [ 0.23   0.491  0.77   0.77 ]\n",
+      " [ 0.605  0.605  0.731  0.731]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "CC = ComputeOneBitKNNConvergence(\n",
+    "        n_trials_per_training_set_size=3,\n",
+    "        n_max=n_max,\n",
+    "        n_steps=4,\n",
+    "        dataset_settings = {\n",
+    "            'n_trials':ntri,\n",
+    "            'prob_success':p,\n",
+    "            'gen_distr_type':'binom'\n",
+    "        },\n",
+    "        validation_set_size = 1000\n",
+    "    )\n",
+    "luigi.build([CC], local_scheduler=True, workers=8, log_level='ERROR')\n",
+    "with CC.output().open() as f:\n",
+    "    res = pickle.load(f)\n",
+    "print(res['sd_matrix'])"
    ]
   },
   {
