--- a/Notebooks/development of luigi framework.ipynb
+++ b/Notebooks/development of luigi framework.ipynb
@@ -132,6 +132,135 @@
     "import itertools\n",
     "list(range(3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GenSamplesOneBit'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GenSamplesOneBit.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.ABC"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type('ABC', (), {})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "type.__new__() argument 2 must be tuple, not Register",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-3605ee374abb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     38\u001b[0m GSs = type(gs_name+'GenSamples',\n\u001b[1;32m     39\u001b[0m            \u001b[0;34m(\u001b[0m\u001b[0mGenSamples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGenSampleType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgenerate_in_batch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m            \u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m            )\n",
+      "\u001b[0;31mTypeError\u001b[0m: type.__new__() argument 2 must be tuple, not Register"
+     ]
+    }
+   ],
+   "source": [
+    "from luigi_utils.sampling_framework import GenSample, GenSamples, FitModel, \\\n",
+    "    EvaluateStatisticalDistance, ComputeConvergenceCurve\n",
+    "from luigi_utils.privacy_estimator_mixins import DensityEstFitterMixin, \\\n",
+    "    ExpectationFitterMixin, KNNFitterMixin\n",
+    "\n",
+    "\n",
+    "def build_convergence_curve_pipeline(GenSampleType: GenSample,\n",
+    "                                     generate_in_batch=False,\n",
+    "                                     fitter = 'knn',\n",
+    "                                     ) -> ComputeConvergenceCurve:\n",
+    "    gs_name = GenSampleType.__name__\n",
+    "    GSs = type(gs_name+'GenSamples',\n",
+    "               (GenSamples(GenSampleType, generate_in_batch=generate_in_batch))\n",
+    "               , {}\n",
+    "               )\n",
+    "\n",
+    "    if fitter=='knn':\n",
+    "        F = KNNFitterMixin\n",
+    "    elif fitter=='density':\n",
+    "        F = DensityEstFitterMixin\n",
+    "    elif fitter=='expectation':\n",
+    "        F = ExpectationFitterMixin\n",
+    "\n",
+    "    FM = type(gs_name+'FitModel'+fitter,\n",
+    "              (F(), FitModel(GSs)), {}\n",
+    "              )\n",
+    "\n",
+    "    ESD = type(gs_name+'EvaluateStatisticalDistance'+fitter,\n",
+    "               (EvaluateStatisticalDistance(samplegen=GSs, model=FM)), {}\n",
+    "               )\n",
+    "\n",
+    "    CCC = type(gs_name+'ComputeConvergenceCurve'+fitter,\n",
+    "               (ComputeConvergenceCurve(ESD)), {}\n",
+    "               )\n",
+    "\n",
+    "    return CCC\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "type.__new__() argument 2 must be tuple, not type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-2b35a04536bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mGenSampleType\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGenSamplesOneBit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgs_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGenSampleType\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mGSs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgs_name\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'GenSamples'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mGenSampleType\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: type.__new__() argument 2 must be tuple, not type"
+     ]
+    }
+   ],
+   "source": [
+    "class GenSamplesOneBit(object):\n",
+    "    pass\n",
+    "GenSampleType = GenSamplesOneBit\n",
+    "gs_name = GenSampleType.__name__\n",
+    "GSs = type(gs_name+'GenSamples', (GenSampleType), {})"
+   ]
   }
  ],
  "metadata": {
