make num samples to increment in powers of two

--- a/Notebooks/development of luigi framework.ipynb
+++ b/Notebooks/development of luigi framework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -34,6 +34,27 @@
     "                                num=n_steps).\\\n",
     "                            astype(np.int)\n",
     "print(tss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   8,   16,   32,   64,  128,  256,  512, 1024])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_pows = np.floor(np.log2(1024)+np.spacing(1)).astype(np.int)\n",
+    "np.logspace(3,n_pows, num=n_pows-2, dtype=int, base=2)"
    ]
   },
   {
