add recursive functionality to gensamples

--- a/Notebooks/1-bit sum.ipynb
+++ b/Notebooks/1-bit sum.ipynb
@@ -315,6 +315,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timing GenSamples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without halving: 7.5sec\n",
+    "With halving: 8.1sec (i.e. not much overhead)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.109845638275146\n"
+     ]
+    }
+   ],
+   "source": [
+    "from luigi_utils.sampling_framework import GenSamples\n",
+    "import time\n",
+    "\n",
+    "class GS(GenSamples(GenSampleOneBitSum, generate_in_batch=True)):\n",
+    "    pass\n",
+    "GSi = GS(dataset_settings = ccc_kwargs['dataset_settings'],\n",
+    "  random_seed='0',\n",
+    "  generate_positive_samples=True,\n",
+    "  num_samples=2**15)\n",
+    "\n",
+    "start = time.time()\n",
+    "luigi.build([GSi], local_scheduler=True, workers=8, log_level='ERROR')\n",
+    "cputime = time.time() - start\n",
+    "print(cputime)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -332,6 +377,33 @@
    ],
    "source": [
     "res['training_set_sizes'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  3.])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((np.array([]), np.array([1,2,3])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More exp"
    ]
   },
   {
