svd passing tests

--- a/Notebooks/development of luigi framework.ipynb
+++ b/Notebooks/development of luigi framework.ipynb
@@ -332,12 +332,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = sparse.random(3,4, density=0.25)\n",
+    "X = sparse.random(3,4, density=0.25).tocsr()\n",
     "v = np.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (1, 0)\t0.671136566994\n",
+      "  (2, 0)\t0.575062821876\n",
+      "  (2, 2)\t0.0640233290391\n",
+      "  (1, 0)\t0.671136566994\n",
+      "  (2, 0)\t0.575062821876\n",
+      "  (2, 2)\t0.0640233290391\n",
+      "  (4, 0)\t0.671136566994\n",
+      "  (5, 0)\t0.575062821876\n",
+      "  (5, 2)\t0.0640233290391\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)\n",
+    "print(sparse.vstack((X,X)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0,:].T.dot(X[0,:]).toarray()"
    ]
   },
   {
