--- a/Notebooks/Asymptotic Analysic.ipynb
+++ b/Notebooks/Asymptotic Analysic.ipynb
@@ -11,7 +11,6 @@
     "from pprint import pprint\n",
     "\n",
     "import numpy as np\n",
-    "import torch\n",
     "import luigi\n",
     "import dill\n",
     "import pandas as pd\n",
@@ -29,6 +28,16 @@
     "svd_dataset_settings, ExpCCCSVD, CCCSVD, All\n",
     "from dataset_utils.recsys_datasets import get_ml1m_user\n",
     "from dataset_utils.text_datasets import get_twenty_doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch==0.4.1\n",
+    "import torch"
    ]
   },
   {
@@ -937,14 +946,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1025,7 +1038,7 @@
     "DF.drop_duplicates(inplace=True)\n",
     "DF.dropna(inplace=True)\n",
     "print(DF.columns)\n",
-    "print(DF.shape)\n"
+    "print(DF.shape)"
    ]
   },
   {
@@ -1094,7 +1107,7 @@
     "y = np.random.randn(4)\n",
     "y_tensor = torch.from_numpy(y)\n",
     "print(y_tensor.size())\n",
-    "print(y_tensor.numpy())\n"
+    "print(y_tensor.numpy())"
    ]
   },
   {
@@ -1119,7 +1132,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "x = DF.training_set_size.values.astype(np.double)\n",
     "y = DF.classifier_accuracy.values\n",
     "x = torch.from_numpy(x)\n",
@@ -1319,7 +1331,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1330,5 +1342,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
