--- a/Notebooks/Asymptotic Analysic.ipynb
+++ b/Notebooks/Asymptotic Analysic.ipynb
@@ -260,9 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import itertools\n",
     "asymptotics_jobs = [AllSVDAsymptotics(datasets=['ml-1m', '20NG'],\n",
@@ -270,7 +281,8 @@
     "                                      svd_kwargs={'SVD_type':k})\n",
     "                    for k in ['hidden_eigs',\n",
     "                              'exposed_eigs',\n",
-    "                              'full_correlation']\n",
+    "#                               'full_correlation'\n",
+    "                             ]\n",
     "                   ]\n",
     "AAs = list(itertools.chain(*[aj.requires() for aj in asymptotics_jobs]))\n",
     "luigi.build(AAs, local_scheduler=True, workers=4, log_level='ERROR')"
