Laplace experiment results

--- a/Notebooks/Experiment 2 and 3 -- Run trials and look at per-document privacy.ipynb
+++ b/Notebooks/Experiment 2 and 3 -- Run trials and look at per-document privacy.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "        plt.ylabel('P[correct] (lower $\\propto$ more privacy)')\n",
     "        if gn=='20NG':\n",
     "            plt.xlabel('Document #')\n",
-    "            plt.ylabel('')\n",
+    "#             plt.ylabel('')\n",
     "        if gn=='ml-1m':\n",
     "            plt.xlabel('User #')\n",
     "        plt.legend(handles,\n",
@@ -249,7 +249,9 @@
     "                      on=intersection_index.values.tolist(),\n",
     "                      how='outer')\n",
     "DF.loc[DF.classifier_accuracy < 0.5, 'classifier_accuracy'] = 0.5\n",
-    "DF = DF[DF.part_fraction==0.01]"
+    "DF = DF[DF.part_fraction==0.01]\n",
+    "n_docs = DF.doc_ind.nunique()\n",
+    "n_max = DF.n_max.max()"
    ]
   },
   {
